<resources>
    <!-- Заголовки окон -->
    <string name="app_name">Informatics</string>
    <string name="title_home">Главная</string>
    <string name="title_book">Литература</string>
    <string name="title_lab">Лабораторные работы</string>
    <string name="title_apps">Приложения</string>
    <string name="title_settings">Настройки</string>
    <string name="app1">Минимизация</string>

    <!-- Подсказки для ввода -->
    <string name="hint_name">Введите ФИО студента</string>
    <string name="hint_group">Введите учебную группу</string>
    <string name="hint_password">Введите пароль</string>
    <string name="hint_repassword">Введите пароль ещё раз</string>

    <!-- Ошибки и состояния для регистрации и логина -->
    <string name="enter_valid_email">Введите верный адрес</string>
    <string name="enter_valid_password">Пароль должен содержать от 4 до 16 знаков</string>
    <string name="enter_valid_name">Введите верное ФИО</string>
    <string name="enter_valid_group">Введите группу в фомрате XXXX-XX-XX</string>
    <string name="error_password">Неверный пароль</string>
    <string name="signup_success">Регистрация успешна</string>
    <string name="signup_failed">Ошибка регистарции</string>
    <string name="create_ac">Создать учётную запись</string>
    <string name="creating_ac">Создание учётной записи</string>

    <!-- Заголовки для регистрации и логина -->
    <string name="login">Вход</string>
    <string name="reg">Регистрация</string>
    <string name="logout">Выйти из учётной записи</string>
    <string name="not_reg">Ещё не зарегистрированы? Зарегестрируйтесь</string>
    <string name="al_member">Уже зарегистрированы? Войдите</string>
    <string name="forgot_password">Восстановить пароль</string>
    <string name="pass1_pass2">Пароли должны совпадать</string>

    <string name="change_email">Сменить адрес почты</string>
    <string name="current_email">Текущий адрес</string>
    <string name="new_email">Новый адрес</string>

    <!-- Тестовые данные -->
    <string name="testGroup">ИВБО-01-19</string>
    <string name="testName">Жмышенко Валерий Альбертович</string>
    <string name="testEmail">IVBO-01-18@yandex.ru</string>
    <string name="testWeek">Сейчас идёт \n 5 \n неделя</string>
    <string name="testExam">Дней до сессии \n 55</string>

    <string name="Exam">Недель до сессии</string>
    <string name="Week1">Текущая неделя</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Адрес электронной почты</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войдите или зарегестрируйтесь</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">"Добро пожаловать!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Ошибка входа"</string>
    <string name="auth">"Аутентификация"</string>

    <!-- Preference Titles -->
    <string name="profile_header">Учётная запись</string>
    <string name="login_header">Система входа</string>
    <string name="display_header">Экран</string>

    <string name="change_password">Сменить пароль</string>


    <!-- Profile Preferences -->
    <string name="name_title">Ваше ФИО</string>
    <string name="email_title">Ваш адрес электронной почты</string>
    <string name="group_title">Ваша группа</string>

    <!-- Остальные настройки -->
    <string name="auto_log">Автоматический вход</string>
    <string name="choose_theme">Выберите тему</string>
    <string name="Light">Светлая</string>
    <string name="Dark">Тёмная</string>
    <string name="Default">По умолчанию</string>
    <string name="bad_email">Введите верный адрес</string>
    <string name="bad_pass">Пароль должен содержать от 4 до 16 знаков</string>
    <string name="bad_name">Введите верное ФИО</string>
    <string name="bad_group">Введите группу в фомрате XXXX-XX-XX</string>


    <string name="old_password">Введите старый пароль</string>
    <string name="new_password">Введите новый пароль</string>
    <string name="renew_password">Введите новый пароль ещё раз</string>
    <string name="oldpass_newpass">Новый пароль совпадает со старым</string>
    <string name="password_success">Сменя пароля успешна</string>
    <string name="password_failed">Ошибка смены пароля</string>

    <string name="oldemail_newemail">Старый адрес не может совпадать с новым</string>
    <string name="email_success">Сменя адреса успешна</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
