<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_book"
        android:icon="@drawable/baseline_book_24"
        android:title="@string/title_book" />

    <item
        android:id="@+id/navigation_lab"
        android:icon="@drawable/icons8"
        android:title="@string/title_lab" />

    <item
        android:id="@+id/navigation_apps"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_apps" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/title_settings" />

</menu>
